# ocr-tools

./: .gitignore  LICENSE  Makefile  README.md  ocr-tools.code-workspace  pyproject.toml  setup.py
notebooks/: clean-pdf.ipynb  datagrid-test.ipynb  doc.json  polars-test.ipynb  scratch.ipynb  textractor.ipynb
ocrtools/: __init__.py  cli.py
ocrtools/data/: config.yml
ocrtools/pdf/: __init__.py  cli.py
ocrtools/pdftools/: __init__.py  cli.py  functions.py
ocrtools/preprocess/: __init__.py  cli.py  functions.py
ocrtools/textract/: __init__.py  cli.py  functions.py
review-portal/: .gitignore  MANIFEST.in  Procfile  README.md  pyproject.toml
review-portal/review_portal/: __init__.py
review-portal/review_portal/components/: colors.txt  data.py
review-portal/review_portal/pages/: __init__.py  extras.py  highlights.py  main.py  metadata.py  test.py
scripts/: extract_pdfs_cli.py  solara-app.py  solara-app2.py
tests/: conftest.py  test_preprocess.py
