[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-tools"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "typer",
    "pyyaml", 
    "pandas",
    "matplotlib",
    "tqdm",
    "Pillow",
    "PyMuPDF",
    "pymupdf-fonts",
    "pytesseract",
    "ocrmypdf",
    "pdf2image",
    "img2pdf",
    "opencv-python",
    "deskew",
    "amazon-textract-textractor[pdf]",
]

[project.urls]
Home = "https://github.com/rs-kellogg/ocr-tools"

[project.optional-dependencies]
test = [
  "pytest",
]
lint = [
  "black",
  "flake8"
]
notebook = [
    "jupyterlab",
    "jupyterlab-tabular-data-editor",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["ocrtools"]

[tool.hatch.build.targets.wheel]
packages = ["ocrtools"]

[project.scripts]
ocrtools = "ocrtools.cli:app"

[tool.setuptools.package-data]
"ocrtools.data" = ["*.yml"]

[tool.hatch.version]
path = "ocrtools/__init__.py"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
