[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-portal"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "solara",
    "plotly",
    "PyMUPDF",
    "ipydatagrid",
    "bqplot",
    "GitPython",
    "polars[numpy, pandas]",
    "temppathlib"
]

[project.urls]
Home = "https://github.com/rs-kellogg/ocr-tools/tree/main/review-portal"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["review_portal"]

[tool.setuptools.package-data]
"*" = ["*.pdf"]
"review_portal.components.txt" = ["*.txt"]
"review_portal.public.pdf" = ["*.pdf"]
"review_portal.public.csv" = ["*.csv"]
"review_portal.public.json" = ["*.json"]
"review_portal.public.png" = ["*.png"]

[tool.hatch.version]
path = "review_portal/__init__.py"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
